--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         
         <div id="header">
                 <div class="container">
+                        <br><br>
                 <nav>
                         <img src="images/logo.png" class ="logo" alt="">
                         <ul>
@@ -29,10 +30,10 @@
                 </nav>
                 
                 <body>
-                        <br>
+                        <br><br>
                         <div class="typing-container">
                                 <div class="font">
-                                        <span id="sentence" class="sentence">justin guo -   </span>
+                                        <span id="sentence" class="sentence"><b>justin guo</b> -   </span>
                                         <span id="feature-text"></span>
                           <span class="input-cursor"></span>
 
@@ -124,7 +125,7 @@
                          <p style="font-weight: bold">If you'd like to get into contact, please don't hesitate to send me an email - <u>jbguo@umich.edu</u> :) </p>
                          <br>
                          <br>
-                        <h2 style="font-size: 30px; text-align: center;">find me below!</h2> 
+                        <h2 style="font-size: 30px; text-align: center; font-family: Arial, Helvetica, sans-serif;">find me below!</h2> 
                         <br>
                         <div class="thinline"></div>
                         <br>
