first blog post up
check it

--- a/thoughts.html
+++ b/thoughts.html
@@ -27,8 +27,8 @@
                         </ul>
                 </nav>
                 <h2 style ="margin-top: 5%; text-align: center;">my thoughts on</h2>
-                <a href="/blogIntro.html">
-                        <u><h2 style ="margin-top: 20%; text-align: center;">myself (as of May 8th, 2023)</h2></u>
+                <a href="https://docs.google.com/document/d/1jaAh5IQm0Q3oxejBBrMDjBRD7SfBNn7FEyD-ZSGWbqo/edit?usp=sharing" target="_blank">
+                        <u><h2 style ="margin-top: 20%; text-align: center;">myself (May 8th, 2023)</h2></u>
                 </a>
                 
             
