--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
                 </body>
                 <br>
+                        
                         <div class="line"></div>
                         <div class="center">
                                 <div class="column">
@@ -53,7 +54,11 @@
                         
                         <div class="regardless">
                                 <br>
-                         <h2 style="font-size: 16px;">I'm Justin - a junior at the University of Michigan studying business with minors in computer science and entrepreneurship. I hope you're well and welcome to my website! </h2>
+                         <h2 style="font-size: 16px;">I'm Justin - a junior at the University of Michigan studying business with minors in computer science and entrepreneurship. I hope you're well! </h2>
+                        <img src="/me.jpg" alt="" style="width: 30%; height: 30%;border-radius: 10px;filter: grayscale(50%); display: block;
+                        margin-left: auto;
+                        margin-right: auto;
+                        margin-top: 10px;">
                                 <br>
                                 Professionally, I want to pursue product at a consumer-facing tech company and eventually commit to pursuing my own entrepreneurial venture. 
                                 Positive, tangible impact -the kind where you can immediately observe your decisions making people feel a little better- always brings a smile to my face, and I truly believe that there is no better place to see that impact than the technology we use every single day.</p>
