--- a/about.html
+++ b/about.html
@@ -30,14 +30,12 @@
                         </ul>
                 </nav>
                 <div class="titleText">
-                        <span>justin guo</span>
                       <h2> 
 
                           <br>
                           <br>
                       </h2>
                 </div>
-                <div class="line"></div>
                 <br>
                 <u><h2 style="text-align: center;">At a Professional Glance</h2></u>
                                 <br>
@@ -53,9 +51,8 @@
                                 of simplifying a deeply rooted painpoint into a layman's solution to be highly exciting. 
                                 With the right implementation, users can derive a high amount of positive impact from even the smallest of product improvements. 
                                 <br><br>
-                                <div class="line">
-                                        <br>
-                                        <h3 style="font-size: 18px">My strengths lie in <i><u>creativity</u>, <u>critical thinking</u>, <u>autonomy</u>, <u>personability</u>, and <u>curiosity</u>.</i></h3>
+                                        <br><br><br><br><br><br>
+                                        <u><h2 style="text-align: center;">Strengths</h2></u>
                                         <div class="professionalContainer" style = 'width: 100%; display:flex; flex-direction: row;'>
                                                 <div class="aboutContainer">
                                                         <br>
