--- a/thoughts.html
+++ b/thoughts.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Blog</title>
+        <title>About Me</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌱</text></svg>">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,9 @@
         
         <div id="header">
                 <div class="container">
+                        <br><br>
                 <nav>
+                        <br>
                         <img src="images/logo.png" class ="logo" alt="">
                         <ul>
                                 <li><a href="/index.html">home</a></li>
@@ -27,6 +29,11 @@
                                 <li><a href="/thoughts.html">thoughts</a></li>
                         </ul>
                 </nav>
+                <div class="titleText">
+                      <h2> 
+                      </h2>
+                </div>
+                <br>
                 <h2 style ="margin-top: 5%; text-align: center;">my thoughts on</h2>
                 <a href="https://docs.google.com/document/d/1jaAh5IQm0Q3oxejBBrMDjBRD7SfBNn7FEyD-ZSGWbqo/edit?usp=sharing" target="_blank">
                         <u><h2 style ="margin-top: 20%; text-align: center;">myself (May 8th, 2023)</h2></u>
