--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 </div>
                                 <!-- <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1QSpqdmc5R4VPTXew3YX5D?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
                         <br>        
-                        </div><br><br><br>
+                        </div><br><br><br><br><br>
                                 Professionally, I want to pursue product at a consumer-facing tech company and eventually commit to pursuing my own entrepreneurial venture. 
                                 Positive, tangible impact -the kind where you can immediately observe your decisions making people feel a little better- always brings a smile to my face, and I truly believe that there is no better place to see that impact than the technology we use every single day.</p>
                          <br>
