--- a/thoughts.html
+++ b/thoughts.html
@@ -35,8 +35,11 @@
                 </div>
                 <br>
                 <h2 style ="margin-top: 5%; text-align: center;">my thoughts on</h2>
+                <a href="https://docs.google.com/document/d/1LCjIVtNtnR1ws58o7_Kk_mmmQGlqg4rboBsYLL01DvI/edit?usp=sharing" target="_blank">
+                        <u><h2 style ="margin-top: 20%; text-align: center;">mental models (June 24th, 2023)</h2></u>
+                </a>
                 <a href="https://docs.google.com/document/d/1jaAh5IQm0Q3oxejBBrMDjBRD7SfBNn7FEyD-ZSGWbqo/edit?usp=sharing" target="_blank">
-                        <u><h2 style ="margin-top: 20%; text-align: center;">myself (May 8th, 2023)</h2></u>
+                        <u><h2 style ="margin-top: 5%; text-align: center;">myself (May 8th, 2023)</h2></u>
                 </a>
                 
             
